kyverno/deploy/kyverno-admission-controller-args-patch.yaml
# Patches kyverno controllers deployment arguments.
#
# Since Kyverno controllers are now split into separate Deployments we need to
# specify the needed flags in the respective controller arguments based on:
# https://kyverno.io/docs/installation/customization/#container-flags
#
# The following flags are set:
#
# -v=0 lowers logging verbisity as Kyverno tends to get chatty during background
# operations and logs were dropper by the forwarders
#
# --admissionReports=false since we are not relying on reports for anything and
# Kyverno historically have been very resource intensive when generating
# reports
#
# --forceFailurePolicyIgnore=true will make sure we have a fail open policy everywhere.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyverno-admission-controller
  namespace: kube-system
spec:
  template:
    spec:
      containers:
        - args:
            - --caSecretName=kyverno-svc.kube-system.svc.kyverno-tls-ca
            - --tlsSecretName=kyverno-svc.kube-system.svc.kyverno-tls-pair
            - --backgroundServiceAccountName=system:serviceaccount:kube-system:kyverno-background-controller
            - --reportsServiceAccountName=system:serviceaccount:kube-system:kyverno-reports-controller
            - --servicePort=443
            - --webhookServerPort=9443
            - --resyncPeriod=15m
            - --disableMetrics=false
            - --otelConfig=prometheus
            - --metricsPort=8000
            - --admissionReports=false
            - --autoUpdateWebhooks=true
            - --enableConfigMapCaching=true
            - --enableDeferredLoading=true
            - --dumpPayload=false
            - --forceFailurePolicyIgnore=true
            - --generateValidatingAdmissionPolicy=false
            - --dumpPatches=false
            - --maxAPICallResponseLength=2000000
            - --loggingFormat=text
            - --v=0
            - --omitEvents=PolicyApplied,PolicySkipped
            - --enablePolicyException=false
            - --protectManagedResources=false
            - --allowInsecureRegistry=false
            - --registryCredentialHelpers=default,google,amazon,azure,github
          name: kyverno
