kyverno/deploy/kyverno-admission-controller-master-schedule-patch.yaml
# Deploy kyverno admission controller on master nodes to avoid being affected
# by other workloads. If kyverno is down, admission requests will fail.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyverno-admission-controller
  namespace: kube-system
spec:
  template:
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
      nodeSelector:
        role: master
