kyverno/deploy/kyverno-admission-controller-replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyverno-admission-controller
  namespace: kube-system
spec:
  replicas: 3 # the recommended replica counts for HA is at least 3: https://kyverno.io/docs/high-availability/
