kyverno/deploy/kyverno-cleanup-controller-args-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyverno-cleanup-controller
  namespace: kube-system
spec:
  template:
    spec:
      containers:
        - args:
            - --caSecretName=kyverno-cleanup-controller.kube-system.svc.kyverno-tls-ca
            - --tlsSecretName=kyverno-cleanup-controller.kube-system.svc.kyverno-tls-pair
            - --servicePort=443
            - --cleanupServerPort=9443
            - --webhookServerPort=9443
            - --disableMetrics=false
            - --otelConfig=prometheus
            - --metricsPort=8000
            - --enableDeferredLoading=true
            - --dumpPayload=false
            - --maxAPICallResponseLength=2000000
            - --loggingFormat=text
            - --v=0
            - --protectManagedResources=false
            - --ttlReconciliationInterval=1m
          name: controller
