kyverno/deploy/kyverno-reports-controller-args-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyverno-reports-controller
  namespace: kube-system
spec:
  template:
    spec:
      containers:
        - args:
            - --metricsPort=8000 # Default, but leaving for visibility since we need to patch Prometheus annotations on Service level.
            - --admissionReports=false
            - -v=0
            - --backgroundScan=false
          name: controller
