kyverno/deploy/kyverno-reports-controller-resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyverno-reports-controller
  namespace: kube-system
spec:
  template:
    spec:
      containers:
        - name: controller
          resources:
            limits:
              cpu: "4"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 64Mi
