kyverno/deploy/kyverno-background-controller-metrics-svc-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyverno-background-controller-metrics
  namespace: kube-system
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "8000"
    prometheus.io/scrape: "true"
